config/persistentVolume/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: www.zhangli07.com
    http:
      paths:
      - path: /access-pv
        backend:
          serviceName: pvc-svc
          servicePort: 80
